TAG: littriageload-6-0-17-2
DATE: 05/14/2021
STAFF: lec
b39-509/Lit Triage load issue/improve execution time

TAG: littriageload-6-0-17-1
DATE: 05/11/2021
STAFF: lec
TR13307/Adding PMIDS from Noctua load into MGI
TR13349/Build 39/Relevance/Secondary Triage
TR13288/Lit triage load - Handle text extraction problems better

TAG: littriageload-6-0-16-7
DATE: 04/21/2021
STAFF: lec
python3/add str()/level2 errors

TAG: littriageload-6-0-16-6
DATE: 01/04/2021
STAFF: lec
add some try/except blocks to level1SanityChecks

TAG: littriageload-6-0-16-5
DATE: ????
STAFF: jbeal
????

TAG: littriageload-6-0-16-4
DATE: 09/09/2020
STAFF: lec
added littriageload.pdf.log

TAG: littriageload-6-0-16-3
DATE: 08/24/2020
STAFF: jak
improve stderr capture from PdfParser during text extraction

TAG: littriageload-6-0-16-2
TAG: littriageload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: littriageload-6-0-15-5
DATE: 06/18/2020
STAFF: lec
TR13321/ltlo: NLM refresh folder adding an extra lit record

TAG: littriageload-6-0-15-4
DATE: 03/10/2020
STAFF: lec
PdfParser.py
TR13279/JCI & REP (Reproduction)

TAG: littriageload-6-0-15-3
TAG: littriageload-6-0-15-2
DATE: 02/05/2020
STAFF: lec 
CHANGES:
TR12871/ltlo: Erratum/corrections/retractions
TR13224/ltlo: PNAS doi extraction issue
TR13208/ltlo: blood journal doi extraction is truncated

TAG: littriageload-6-0-15-1
DATE: 12/02/2019
STAFF: lec 
CHANGES: TR13007/RNA Sequence project/add bib_refs autosequence

TAG: littriageload-6-0-14-10
TAG: littriageload-6-0-14-9
TAG: littriageload-6-0-14-8
TAG: littriageload-6-0-14-7
TAG: littriageload-6-0-14-6
DATE: 09/04/2019
STAFF: lec 
TR13152/fix setSupplemental()
check for extractedText = None

TAG: littriageload-6-0-14-5
DATE: 08/20/2019
STAFF: lec 
TR13152/fix setSupplemental()

TAG: littriageload-6-0-14-4
TAG: littriageload-6-0-14-3
TAG: littriageload-6-0-14-2
TAG: littriageload-6-0-14-1
DATE: 04/03/2019, 05/06/2018
STAFF: lec 
TR12963/teleuse-to-mgd_java_api